// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should defaultNpmScriptsOrder 1`] = `
Object {
  "build": "14",
  "coverage": "19",
  "dev": "22",
  "install": "16",
  "lerna": "10",
  "link": "13",
  "lint": "18",
  "npm": "12",
  "pack": "5",
  "postpack": "4",
  "postpublish": "2",
  "prepack": "6",
  "prepare": "8",
  "prepublish": "9",
  "prepublishOnly": "7",
  "publish": "3",
  "restart": "21",
  "shrinkwrap": "1",
  "start": "23",
  "stop": "20",
  "test": "17",
  "uninstall": "15",
  "version": "0",
  "yarn": "11",
}
`;

exports[`should defaultNpmScriptsOrder 2`] = `
Array [
  "start",
  "dev",
  "restart",
  "stop",
  "coverage",
  "lint",
  "test",
  "install",
  "uninstall",
  "build",
  "link",
  "npm",
  "yarn",
  "lerna",
  "prepublish",
  "prepare",
  "prepublishOnly",
  "prepack",
  "pack",
  "postpack",
  "publish",
  "postpublish",
  "shrinkwrap",
  "version",
]
`;

exports[`should defaultNpmScriptsOrder 3`] = `
"{
  \\"start\\": \\"23\\",
  \\"dev\\": \\"22\\",
  \\"restart\\": \\"21\\",
  \\"stop\\": \\"20\\",
  \\"coverage\\": \\"19\\",
  \\"lint\\": \\"18\\",
  \\"test\\": \\"17\\",
  \\"install\\": \\"16\\",
  \\"uninstall\\": \\"15\\",
  \\"build\\": \\"14\\",
  \\"link\\": \\"13\\",
  \\"npm\\": \\"12\\",
  \\"yarn\\": \\"11\\",
  \\"lerna\\": \\"10\\",
  \\"prepublish\\": \\"9\\",
  \\"prepare\\": \\"8\\",
  \\"prepublishOnly\\": \\"7\\",
  \\"prepack\\": \\"6\\",
  \\"pack\\": \\"5\\",
  \\"postpack\\": \\"4\\",
  \\"publish\\": \\"3\\",
  \\"postpublish\\": \\"2\\",
  \\"shrinkwrap\\": \\"1\\",
  \\"version\\": \\"0\\"
}"
`;

exports[`should defaultNpmScriptsOrder 4`] = `
Object {
  "build": "9",
  "coverage": "4",
  "dev": "1",
  "install": "7",
  "lerna": "13",
  "link": "10",
  "lint": "5",
  "npm": "11",
  "pack": "18",
  "postpack": "19",
  "postpublish": "21",
  "prepack": "17",
  "prepare": "15",
  "prepublish": "14",
  "prepublishOnly": "16",
  "publish": "20",
  "restart": "2",
  "shrinkwrap": "22",
  "start": "0",
  "stop": "3",
  "test": "6",
  "uninstall": "8",
  "version": "23",
  "yarn": "12",
}
`;

exports[`should defaultNpmScriptsOrder 5`] = `
Array [
  "start",
  "dev",
  "restart",
  "stop",
  "coverage",
  "lint",
  "test",
  "install",
  "uninstall",
  "build",
  "link",
  "npm",
  "yarn",
  "lerna",
  "prepublish",
  "prepare",
  "prepublishOnly",
  "prepack",
  "pack",
  "postpack",
  "publish",
  "postpublish",
  "shrinkwrap",
  "version",
]
`;

exports[`should defaultNpmScriptsOrder 6`] = `
"{
  \\"start\\": \\"0\\",
  \\"dev\\": \\"1\\",
  \\"restart\\": \\"2\\",
  \\"stop\\": \\"3\\",
  \\"coverage\\": \\"4\\",
  \\"lint\\": \\"5\\",
  \\"test\\": \\"6\\",
  \\"install\\": \\"7\\",
  \\"uninstall\\": \\"8\\",
  \\"build\\": \\"9\\",
  \\"link\\": \\"10\\",
  \\"npm\\": \\"11\\",
  \\"yarn\\": \\"12\\",
  \\"lerna\\": \\"13\\",
  \\"prepublish\\": \\"14\\",
  \\"prepare\\": \\"15\\",
  \\"prepublishOnly\\": \\"16\\",
  \\"prepack\\": \\"17\\",
  \\"pack\\": \\"18\\",
  \\"postpack\\": \\"19\\",
  \\"publish\\": \\"20\\",
  \\"postpublish\\": \\"21\\",
  \\"shrinkwrap\\": \\"22\\",
  \\"version\\": \\"23\\"
}"
`;

exports[`should defaultNpmScriptsOrder v2 1`] = `
Object {
  "build": "14",
  "coverage": "19",
  "dev": "22",
  "install": "16",
  "lerna": "10",
  "link": "13",
  "lint": "18",
  "npm": "12",
  "pack": "5",
  "postbuild": "14",
  "postcoverage": "19",
  "postdev": "22",
  "postinstall": "16",
  "postlerna": "10",
  "postlink": "13",
  "postlint": "18",
  "postnpm": "12",
  "postpack": "5",
  "postprepack": "6",
  "postprepare": "8",
  "postprepublish": "9",
  "postprepublishOnly": "7",
  "postpublish": "3",
  "postrestart": "21",
  "postshrinkwrap": "1",
  "poststart": "23",
  "poststop": "20",
  "posttest": "17",
  "postuninstall": "15",
  "postversion": "0",
  "postyarn": "11",
  "prebuild": "14",
  "precoverage": "19",
  "predev": "22",
  "preinstall": "16",
  "prelerna": "10",
  "prelink": "13",
  "prelint": "18",
  "prenpm": "12",
  "prepack": "6",
  "prepare": "8",
  "prepostpack": "4",
  "prepostpublish": "2",
  "prepublish": "9",
  "prepublishOnly": "7",
  "prerestart": "21",
  "preshrinkwrap": "1",
  "prestart": "23",
  "prestop": "20",
  "pretest": "17",
  "preuninstall": "15",
  "preversion": "0",
  "preyarn": "11",
  "publish": "3",
  "restart": "21",
  "shrinkwrap": "1",
  "start": "23",
  "stop": "20",
  "test": "17",
  "uninstall": "15",
  "version": "0",
  "yarn": "11",
}
`;

exports[`should defaultNpmScriptsOrder v2 2`] = `
Array [
  "prestart",
  "start",
  "poststart",
  "predev",
  "dev",
  "postdev",
  "prerestart",
  "restart",
  "postrestart",
  "prestop",
  "stop",
  "poststop",
  "precoverage",
  "coverage",
  "postcoverage",
  "prelint",
  "lint",
  "postlint",
  "pretest",
  "test",
  "posttest",
  "preinstall",
  "install",
  "postinstall",
  "preuninstall",
  "uninstall",
  "postuninstall",
  "prebuild",
  "build",
  "postbuild",
  "prelink",
  "link",
  "postlink",
  "prenpm",
  "npm",
  "postnpm",
  "preyarn",
  "yarn",
  "postyarn",
  "prelerna",
  "lerna",
  "postlerna",
  "prepublish",
  "postprepublish",
  "prepare",
  "postprepare",
  "prepublishOnly",
  "postprepublishOnly",
  "prepack",
  "postprepack",
  "pack",
  "postpack",
  "prepostpack",
  "publish",
  "postpublish",
  "prepostpublish",
  "preshrinkwrap",
  "shrinkwrap",
  "postshrinkwrap",
  "preversion",
  "version",
  "postversion",
]
`;

exports[`should defaultNpmScriptsOrder v2 3`] = `
"{
  \\"prestart\\": \\"23\\",
  \\"start\\": \\"23\\",
  \\"poststart\\": \\"23\\",
  \\"predev\\": \\"22\\",
  \\"dev\\": \\"22\\",
  \\"postdev\\": \\"22\\",
  \\"prerestart\\": \\"21\\",
  \\"restart\\": \\"21\\",
  \\"postrestart\\": \\"21\\",
  \\"prestop\\": \\"20\\",
  \\"stop\\": \\"20\\",
  \\"poststop\\": \\"20\\",
  \\"precoverage\\": \\"19\\",
  \\"coverage\\": \\"19\\",
  \\"postcoverage\\": \\"19\\",
  \\"prelint\\": \\"18\\",
  \\"lint\\": \\"18\\",
  \\"postlint\\": \\"18\\",
  \\"pretest\\": \\"17\\",
  \\"test\\": \\"17\\",
  \\"posttest\\": \\"17\\",
  \\"preinstall\\": \\"16\\",
  \\"install\\": \\"16\\",
  \\"postinstall\\": \\"16\\",
  \\"preuninstall\\": \\"15\\",
  \\"uninstall\\": \\"15\\",
  \\"postuninstall\\": \\"15\\",
  \\"prebuild\\": \\"14\\",
  \\"build\\": \\"14\\",
  \\"postbuild\\": \\"14\\",
  \\"prelink\\": \\"13\\",
  \\"link\\": \\"13\\",
  \\"postlink\\": \\"13\\",
  \\"prenpm\\": \\"12\\",
  \\"npm\\": \\"12\\",
  \\"postnpm\\": \\"12\\",
  \\"preyarn\\": \\"11\\",
  \\"yarn\\": \\"11\\",
  \\"postyarn\\": \\"11\\",
  \\"prelerna\\": \\"10\\",
  \\"lerna\\": \\"10\\",
  \\"postlerna\\": \\"10\\",
  \\"prepublish\\": \\"9\\",
  \\"postprepublish\\": \\"9\\",
  \\"prepare\\": \\"8\\",
  \\"postprepare\\": \\"8\\",
  \\"prepublishOnly\\": \\"7\\",
  \\"postprepublishOnly\\": \\"7\\",
  \\"prepack\\": \\"6\\",
  \\"postprepack\\": \\"6\\",
  \\"pack\\": \\"5\\",
  \\"postpack\\": \\"5\\",
  \\"prepostpack\\": \\"4\\",
  \\"publish\\": \\"3\\",
  \\"postpublish\\": \\"3\\",
  \\"prepostpublish\\": \\"2\\",
  \\"preshrinkwrap\\": \\"1\\",
  \\"shrinkwrap\\": \\"1\\",
  \\"postshrinkwrap\\": \\"1\\",
  \\"preversion\\": \\"0\\",
  \\"version\\": \\"0\\",
  \\"postversion\\": \\"0\\"
}"
`;

exports[`should script lifecycle 1`] = `
Object {
  "_myscript": "echo _myscript 25.2",
  "_myscript_": "echo _myscript_ 26.2",
  "build": "echo build 9.2",
  "coverage": "echo coverage 4.2",
  "dev": "echo dev 1.2",
  "install": "echo install 7.2",
  "lerna": "echo lerna 13.2",
  "link": "echo link 10.2",
  "lint": "echo lint 5.2",
  "myscript": "echo myscript 28.2",
  "myscript:abc": "echo myscript:abc 28.2",
  "myscript_": "echo myscript_ 27.2",
  "npm": "echo npm 11.2",
  "pack": "echo pack 19.2",
  "pare": "echo pare 15.2",
  "post_myscript": "echo post_myscript 25.3",
  "post_myscript_": "echo post_myscript_ 26.3",
  "postbuild": "echo postbuild 9.3",
  "postcoverage": "echo postcoverage 4.3",
  "postdev": "echo postdev 1.3",
  "postinstall": "echo postinstall 7.3",
  "postlerna": "echo postlerna 13.3",
  "postlink": "echo postlink 10.3",
  "postlint": "echo postlint 5.3",
  "postmyscript": "echo postmyscript 28.3",
  "postmyscript:abc": "echo postmyscript:abc 28.3",
  "postmyscript_": "echo postmyscript_ 27.3",
  "postnpm": "echo postnpm 11.3",
  "postpack": "echo postpack 19.2",
  "postpare": "echo postpare 15.3",
  "postpostpack": "echo postpostpack 19.3",
  "postpostpublish": "echo postpostpublish 21.3",
  "postprepack": "echo postprepack 17.3",
  "postprepare": "echo postprepare 15.3",
  "postprepublish": "echo postprepublish 14.3",
  "postprepublishOnly": "echo postprepublishOnly 16.3",
  "postpublish": "echo postpublish 21.2",
  "postpublishOnly": "echo postpublishOnly 16.3",
  "postrestart": "echo postrestart 2.3",
  "postshrinkwrap": "echo postshrinkwrap 22.3",
  "poststart": "echo poststart 0.3",
  "poststop": "echo poststop 3.3",
  "posttest": "echo posttest 6.3",
  "postuninstall": "echo postuninstall 8.3",
  "postversion": "echo postversion 23.3",
  "postyarn": "echo postyarn 12.3",
  "pre_myscript": "echo pre_myscript 25.1",
  "pre_myscript_": "echo pre_myscript_ 26.1",
  "prebuild": "echo prebuild 9.1",
  "precoverage": "echo precoverage 4.1",
  "predev": "echo predev 1.1",
  "preinstall": "echo preinstall 7.1",
  "prelerna": "echo prelerna 13.1",
  "prelink": "echo prelink 10.1",
  "prelint": "echo prelint 5.1",
  "premyscript": "echo premyscript 28.1",
  "premyscript:abc": "echo premyscript:abc 28.1",
  "premyscript_": "echo premyscript_ 27.1",
  "prenpm": "echo prenpm 11.1",
  "prepack": "echo prepack 19.1",
  "prepare": "echo prepare 15.2",
  "prepostpack": "echo prepostpack 19.1",
  "prepostpublish": "echo prepostpublish 21.1",
  "preprepack": "echo preprepack 17.1",
  "preprepare": "echo preprepare 15.1",
  "preprepublish": "echo preprepublish 14.1",
  "preprepublishOnly": "echo preprepublishOnly 16.1",
  "prepublish": "echo prepublish 21.1",
  "prepublishOnly": "echo prepublishOnly 16.2",
  "prerestart": "echo prerestart 2.1",
  "preshrinkwrap": "echo preshrinkwrap 22.1",
  "prestart": "echo prestart 0.1",
  "prestop": "echo prestop 3.1",
  "pretest": "echo pretest 6.1",
  "preuninstall": "echo preuninstall 8.1",
  "preversion": "echo preversion 23.1",
  "preyarn": "echo preyarn 12.1",
  "publish": "echo publish 21.2",
  "publishOnly": "echo publishOnly 16.2",
  "restart": "echo restart 2.2",
  "shrinkwrap": "echo shrinkwrap 22.2",
  "start": "echo start 0.2",
  "stop": "echo stop 3.2",
  "test": "echo test 6.2",
  "uninstall": "echo uninstall 8.2",
  "version": "echo version 23.2",
  "yarn": "echo yarn 12.2",
}
`;

exports[`should script lifecycle 2`] = `
Array [
  "prestart",
  "start",
  "poststart",
  "predev",
  "dev",
  "postdev",
  "prerestart",
  "restart",
  "postrestart",
  "prestop",
  "stop",
  "poststop",
  "precoverage",
  "coverage",
  "postcoverage",
  "prelint",
  "lint",
  "postlint",
  "pretest",
  "test",
  "posttest",
  "preinstall",
  "install",
  "postinstall",
  "preuninstall",
  "uninstall",
  "postuninstall",
  "prebuild",
  "build",
  "postbuild",
  "prelink",
  "link",
  "postlink",
  "prenpm",
  "npm",
  "postnpm",
  "preyarn",
  "yarn",
  "postyarn",
  "prelerna",
  "lerna",
  "postlerna",
  "preprepublish",
  "prepublish",
  "postprepublish",
  "preprepare",
  "prepare",
  "postprepare",
  "preprepublishOnly",
  "prepublishOnly",
  "postprepublishOnly",
  "preprepack",
  "prepack",
  "postprepack",
  "pack",
  "postpack",
  "prepostpack",
  "postpostpack",
  "publish",
  "postpublish",
  "prepostpublish",
  "postpostpublish",
  "preshrinkwrap",
  "shrinkwrap",
  "postshrinkwrap",
  "preversion",
  "version",
  "postversion",
  "premyscript",
  "premyscript:abc",
  "premyscript_",
  "myscript",
  "_myscript",
  "_myscript_",
  "myscript:abc",
  "myscript_",
  "postmyscript",
  "postmyscript:abc",
  "postmyscript_",
  "pare",
  "postpare",
  "pre_myscript",
  "pre_myscript_",
  "post_myscript",
  "post_myscript_",
  "publishOnly",
  "postpublishOnly",
]
`;

exports[`should script lifecycle 3`] = `
"{
  \\"prestart\\": \\"echo prestart 0.1\\",
  \\"start\\": \\"echo start 0.2\\",
  \\"poststart\\": \\"echo poststart 0.3\\",
  \\"predev\\": \\"echo predev 1.1\\",
  \\"dev\\": \\"echo dev 1.2\\",
  \\"postdev\\": \\"echo postdev 1.3\\",
  \\"prerestart\\": \\"echo prerestart 2.1\\",
  \\"restart\\": \\"echo restart 2.2\\",
  \\"postrestart\\": \\"echo postrestart 2.3\\",
  \\"prestop\\": \\"echo prestop 3.1\\",
  \\"stop\\": \\"echo stop 3.2\\",
  \\"poststop\\": \\"echo poststop 3.3\\",
  \\"precoverage\\": \\"echo precoverage 4.1\\",
  \\"coverage\\": \\"echo coverage 4.2\\",
  \\"postcoverage\\": \\"echo postcoverage 4.3\\",
  \\"prelint\\": \\"echo prelint 5.1\\",
  \\"lint\\": \\"echo lint 5.2\\",
  \\"postlint\\": \\"echo postlint 5.3\\",
  \\"pretest\\": \\"echo pretest 6.1\\",
  \\"test\\": \\"echo test 6.2\\",
  \\"posttest\\": \\"echo posttest 6.3\\",
  \\"preinstall\\": \\"echo preinstall 7.1\\",
  \\"install\\": \\"echo install 7.2\\",
  \\"postinstall\\": \\"echo postinstall 7.3\\",
  \\"preuninstall\\": \\"echo preuninstall 8.1\\",
  \\"uninstall\\": \\"echo uninstall 8.2\\",
  \\"postuninstall\\": \\"echo postuninstall 8.3\\",
  \\"prebuild\\": \\"echo prebuild 9.1\\",
  \\"build\\": \\"echo build 9.2\\",
  \\"postbuild\\": \\"echo postbuild 9.3\\",
  \\"prelink\\": \\"echo prelink 10.1\\",
  \\"link\\": \\"echo link 10.2\\",
  \\"postlink\\": \\"echo postlink 10.3\\",
  \\"prenpm\\": \\"echo prenpm 11.1\\",
  \\"npm\\": \\"echo npm 11.2\\",
  \\"postnpm\\": \\"echo postnpm 11.3\\",
  \\"preyarn\\": \\"echo preyarn 12.1\\",
  \\"yarn\\": \\"echo yarn 12.2\\",
  \\"postyarn\\": \\"echo postyarn 12.3\\",
  \\"prelerna\\": \\"echo prelerna 13.1\\",
  \\"lerna\\": \\"echo lerna 13.2\\",
  \\"postlerna\\": \\"echo postlerna 13.3\\",
  \\"preprepublish\\": \\"echo preprepublish 14.1\\",
  \\"prepublish\\": \\"echo prepublish 21.1\\",
  \\"postprepublish\\": \\"echo postprepublish 14.3\\",
  \\"preprepare\\": \\"echo preprepare 15.1\\",
  \\"prepare\\": \\"echo prepare 15.2\\",
  \\"postprepare\\": \\"echo postprepare 15.3\\",
  \\"preprepublishOnly\\": \\"echo preprepublishOnly 16.1\\",
  \\"prepublishOnly\\": \\"echo prepublishOnly 16.2\\",
  \\"postprepublishOnly\\": \\"echo postprepublishOnly 16.3\\",
  \\"preprepack\\": \\"echo preprepack 17.1\\",
  \\"prepack\\": \\"echo prepack 19.1\\",
  \\"postprepack\\": \\"echo postprepack 17.3\\",
  \\"pack\\": \\"echo pack 19.2\\",
  \\"postpack\\": \\"echo postpack 19.2\\",
  \\"prepostpack\\": \\"echo prepostpack 19.1\\",
  \\"postpostpack\\": \\"echo postpostpack 19.3\\",
  \\"publish\\": \\"echo publish 21.2\\",
  \\"postpublish\\": \\"echo postpublish 21.2\\",
  \\"prepostpublish\\": \\"echo prepostpublish 21.1\\",
  \\"postpostpublish\\": \\"echo postpostpublish 21.3\\",
  \\"preshrinkwrap\\": \\"echo preshrinkwrap 22.1\\",
  \\"shrinkwrap\\": \\"echo shrinkwrap 22.2\\",
  \\"postshrinkwrap\\": \\"echo postshrinkwrap 22.3\\",
  \\"preversion\\": \\"echo preversion 23.1\\",
  \\"version\\": \\"echo version 23.2\\",
  \\"postversion\\": \\"echo postversion 23.3\\",
  \\"premyscript\\": \\"echo premyscript 28.1\\",
  \\"premyscript:abc\\": \\"echo premyscript:abc 28.1\\",
  \\"premyscript_\\": \\"echo premyscript_ 27.1\\",
  \\"myscript\\": \\"echo myscript 28.2\\",
  \\"_myscript\\": \\"echo _myscript 25.2\\",
  \\"_myscript_\\": \\"echo _myscript_ 26.2\\",
  \\"myscript:abc\\": \\"echo myscript:abc 28.2\\",
  \\"myscript_\\": \\"echo myscript_ 27.2\\",
  \\"postmyscript\\": \\"echo postmyscript 28.3\\",
  \\"postmyscript:abc\\": \\"echo postmyscript:abc 28.3\\",
  \\"postmyscript_\\": \\"echo postmyscript_ 27.3\\",
  \\"pare\\": \\"echo pare 15.2\\",
  \\"postpare\\": \\"echo postpare 15.3\\",
  \\"pre_myscript\\": \\"echo pre_myscript 25.1\\",
  \\"pre_myscript_\\": \\"echo pre_myscript_ 26.1\\",
  \\"post_myscript\\": \\"echo post_myscript 25.3\\",
  \\"post_myscript_\\": \\"echo post_myscript_ 26.3\\",
  \\"publishOnly\\": \\"echo publishOnly 16.2\\",
  \\"postpublishOnly\\": \\"echo postpublishOnly 16.3\\"
}"
`;

exports[`sort base 1`] = `
Object {
  "multiply": "2 * 3",
  "postinstall": "echo \\"Installed\\"",
  "postprettier": "echo \\"so pretty\\"",
  "posttest": "abc",
  "pre-fetch-info": "foo",
  "prepare": "npm run build",
  "preprettier": "echo \\"not pretty\\"",
  "pretest": "xyz",
  "prettier": "prettier -l \\"**/*.js\\"",
  "prewatch": "echo \\"about to watch\\"",
  "start": "node server.js",
  "test": "node test.js",
  "watch": "watch things",
}
`;

exports[`sort base 2`] = `
Array [
  "start",
  "pretest",
  "test",
  "posttest",
  "postinstall",
  "prepare",
  "multiply",
  "preprettier",
  "prettier",
  "postprettier",
  "pre-fetch-info",
  "prewatch",
  "watch",
]
`;

exports[`sort base 3`] = `
"{
  \\"start\\": \\"node server.js\\",
  \\"pretest\\": \\"xyz\\",
  \\"test\\": \\"node test.js\\",
  \\"posttest\\": \\"abc\\",
  \\"postinstall\\": \\"echo \\\\\\"Installed\\\\\\"\\",
  \\"prepare\\": \\"npm run build\\",
  \\"multiply\\": \\"2 * 3\\",
  \\"preprettier\\": \\"echo \\\\\\"not pretty\\\\\\"\\",
  \\"prettier\\": \\"prettier -l \\\\\\"**/*.js\\\\\\"\\",
  \\"postprettier\\": \\"echo \\\\\\"so pretty\\\\\\"\\",
  \\"pre-fetch-info\\": \\"foo\\",
  \\"prewatch\\": \\"echo \\\\\\"about to watch\\\\\\"\\",
  \\"watch\\": \\"watch things\\"
}"
`;

exports[`sort base v2 1`] = `
Object {
  "_postprettier": "echo \\"so pretty\\"",
  "multiply": "2 * 3",
  "postinstall": "echo \\"Installed\\"",
  "posttest": "abc",
  "pre-fetch-info": "foo",
  "prepare": "npm run build",
  "preprettier_": "echo \\"not pretty\\"",
  "pretest": "xyz",
  "prettier_": "prettier -l \\"**/*.js\\"",
  "prewatch": "echo \\"about to watch\\"",
  "start": "node server.js",
  "test": "node test.js",
  "watch": "watch things",
}
`;

exports[`sort base v2 2`] = `
Array [
  "start",
  "pretest",
  "test",
  "posttest",
  "postinstall",
  "prepare",
  "preprettier_",
  "prettier_",
  "_postprettier",
  "multiply",
  "pre-fetch-info",
  "prewatch",
  "watch",
]
`;

exports[`sort base v2 3`] = `
"{
  \\"start\\": \\"node server.js\\",
  \\"pretest\\": \\"xyz\\",
  \\"test\\": \\"node test.js\\",
  \\"posttest\\": \\"abc\\",
  \\"postinstall\\": \\"echo \\\\\\"Installed\\\\\\"\\",
  \\"prepare\\": \\"npm run build\\",
  \\"preprettier_\\": \\"echo \\\\\\"not pretty\\\\\\"\\",
  \\"prettier_\\": \\"prettier -l \\\\\\"**/*.js\\\\\\"\\",
  \\"_postprettier\\": \\"echo \\\\\\"so pretty\\\\\\"\\",
  \\"multiply\\": \\"2 * 3\\",
  \\"pre-fetch-info\\": \\"foo\\",
  \\"prewatch\\": \\"echo \\\\\\"about to watch\\\\\\"\\",
  \\"watch\\": \\"watch things\\"
}"
`;

exports[`sort yarn-tool scripts 1`] = `
Object {
  "coverage": "npx nyc yarn run test",
  "lint": "npx eslint **/*.ts",
  "ncu": "npx yarn-tool ncu -u",
  "npm:publish": "npm publish",
  "postpublish_": "git commit -m \\"chore(release): publish\\" .",
  "prepublish:lockfile": "npx sync-lockfile .",
  "prepublishOnly_": "yarn run ncu && yarn run sort-package-json && yarn run test",
  "sort-package-json": "npx yarn-tool sort",
  "test": "echo \\"Error: no test specified\\" && exit 1",
  "test:mocha": "npx mocha --require ts-node/register \\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\"",
  "tsc:default": "tsc -p tsconfig.json",
  "tsc:esm": "tsc -p tsconfig.esm.json",
}
`;

exports[`sort yarn-tool scripts 2`] = `
Array [
  "coverage",
  "lint",
  "test",
  "test:mocha",
  "npm:publish",
  "prepublish:lockfile",
  "prepublishOnly_",
  "postpublish_",
  "ncu",
  "sort-package-json",
  "tsc:default",
  "tsc:esm",
]
`;

exports[`sort yarn-tool scripts 3`] = `
"{
  \\"coverage\\": \\"npx nyc yarn run test\\",
  \\"lint\\": \\"npx eslint **/*.ts\\",
  \\"test\\": \\"echo \\\\\\"Error: no test specified\\\\\\" && exit 1\\",
  \\"test:mocha\\": \\"npx mocha --require ts-node/register \\\\\\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\\\\\"\\",
  \\"npm:publish\\": \\"npm publish\\",
  \\"prepublish:lockfile\\": \\"npx sync-lockfile .\\",
  \\"prepublishOnly_\\": \\"yarn run ncu && yarn run sort-package-json && yarn run test\\",
  \\"postpublish_\\": \\"git commit -m \\\\\\"chore(release): publish\\\\\\" .\\",
  \\"ncu\\": \\"npx yarn-tool ncu -u\\",
  \\"sort-package-json\\": \\"npx yarn-tool sort\\",
  \\"tsc:default\\": \\"tsc -p tsconfig.json\\",
  \\"tsc:esm\\": \\"tsc -p tsconfig.esm.json\\"
}"
`;

exports[`sort yarn-tool scripts 4`] = `
Object {
  "_postpublish_": "git commit -m \\"chore(release): publish\\" .",
  "_prepublishOnly:": "yarn run ncu && yarn run sort-package-json && yarn run test",
  "coverage": "npx nyc yarn run test",
  "lint": "npx eslint **/*.ts",
  "ncu": "npx yarn-tool ncu -u",
  "npm:publish": "npm publish",
  "prepublish:lockfile": "npx sync-lockfile .",
  "sort-package-json": "npx yarn-tool sort",
  "test-": "echo \\"Error: no test specified\\" && exit 1",
  "test:mocha": "npx mocha --require ts-node/register \\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\"",
  "tsc:default": "tsc -p tsconfig.json",
  "tsc:esm": "tsc -p tsconfig.esm.json",
}
`;

exports[`sort yarn-tool scripts 5`] = `
Array [
  "coverage",
  "lint",
  "test-",
  "test:mocha",
  "npm:publish",
  "prepublish:lockfile",
  "_prepublishOnly:",
  "_postpublish_",
  "ncu",
  "sort-package-json",
  "tsc:default",
  "tsc:esm",
]
`;

exports[`sort yarn-tool scripts 6`] = `
"{
  \\"coverage\\": \\"npx nyc yarn run test\\",
  \\"lint\\": \\"npx eslint **/*.ts\\",
  \\"test-\\": \\"echo \\\\\\"Error: no test specified\\\\\\" && exit 1\\",
  \\"test:mocha\\": \\"npx mocha --require ts-node/register \\\\\\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\\\\\"\\",
  \\"npm:publish\\": \\"npm publish\\",
  \\"prepublish:lockfile\\": \\"npx sync-lockfile .\\",
  \\"_prepublishOnly:\\": \\"yarn run ncu && yarn run sort-package-json && yarn run test\\",
  \\"_postpublish_\\": \\"git commit -m \\\\\\"chore(release): publish\\\\\\" .\\",
  \\"ncu\\": \\"npx yarn-tool ncu -u\\",
  \\"sort-package-json\\": \\"npx yarn-tool sort\\",
  \\"tsc:default\\": \\"tsc -p tsconfig.json\\",
  \\"tsc:esm\\": \\"tsc -p tsconfig.esm.json\\"
}"
`;
